test/compile_errors/err_iterator_constructor_unimplemented.w
//! expect-error: iterator constructor 'Iter.empty' from §13.3 is not implemented yet

fn main:
    let _ = Iter.empty()
